need to fix: sqoot is stuck on orlando

--- a/assets/step.css
+++ b/assets/step.css
@@ -292,10 +292,10 @@ h3{
 
 
 .responseDIV {
+	margin-left: 10px;
 	float: left;
 	/*position: relative;*/
 	display: inline;
-	margin-right: 10px;
 	margin-bottom: 10px;
 	padding: 10px;
 	width: 200px;
@@ -305,4 +305,9 @@ h3{
 	max-height: 220px;
 	font-family: 'Satisfy', cursive;
 
+}
+
+.responseIMAGE {
+	width: 150px;
+	height: 80px;
 }
